--- a/www/index2.html
+++ b/www/index2.html
@@ -127,6 +127,14 @@
 
       <div class="container">
 
+        <button id="btnSun">Search!</button>
+
+        <div class="card-deck mb-3 text-center" id="test-result">
+        </div>
+
+
+        <hr class="featurette-divider">
+
         <div class="card-deck mb-3 text-center">
           <div class="card mb-4 shadow-sm">
             <div class="card-header">
@@ -235,7 +243,8 @@
       </footer>
     </main>
   
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.slim.min.js"><\/script>')</script><script src="js/bootstrap.bundle.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script><script src="js/bootstrap.bundle.js"></script>
+    <script src="js/hosting-compare.js"></script>
   </body>
 </html>
