--- a/www/index2.html
+++ b/www/index2.html
@@ -128,9 +128,7 @@
       <div class="container">
 
         <button id="btnSun">Search!</button>
-
-        <div class="card-deck mb-3 text-center" id="test-result">
-        </div>
+        <div id="test-result"></div>
 
 
         <hr class="featurette-divider">
