Add webempresa data

--- a/www/index.html
+++ b/www/index.html
@@ -141,6 +141,18 @@
               Hosting web
             </label>
           </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="HostingType" value="Cloud" id="Cloud">
+            <label class="form-check-label" for="Cloud">
+              Hosting elástico (Cloud)
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="HostingType" value="Wizard" id="Wizard">
+            <label class="form-check-label" for="Wizard">
+              Asistente de creación de páginas web
+            </label>
+          </div>
           <button type="submit" class="btn btn-primary" id="btnSun">Search!</button>
         </form>
 
