Add Raiola Networks data

--- a/www/index.html
+++ b/www/index.html
@@ -142,6 +142,12 @@
             </label>
           </div>
           <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="HostingType" value="Reseller" id="Reseller">
+            <label class="form-check-label" for="Reseller">
+              Reseller
+            </label>
+          </div>
+          <div class="form-check">
             <input class="form-check-input" type="checkbox" name="HostingType" value="Cloud" id="Cloud">
             <label class="form-check-label" for="Cloud">
               Hosting elástico (Cloud)
