--- a/www/index.html
+++ b/www/index.html
@@ -72,7 +72,7 @@
             <div class="container">
               <div class="carousel-caption text-left">
                 <h1>¿Buscas un hosting para alojar tu proyecto?</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <p>¡No busques más y encuentra el <strong>plan de hosting</strong> que mejor se adapta a tí usando nuestro <strong>comparador</strong>!</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
               </div>
             </div>
@@ -81,8 +81,8 @@
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#523f78"/></svg>
             <div class="container">
               <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>Encuentra el mejor hosting</h1>
+                <p>Comparamos entre más de <strong>100 planes de hosting</strong> de diferentes proveedores</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
               </div>
             </div>
@@ -91,8 +91,8 @@
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#523f78"/></svg>
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>XXXXXX</h1>
+                <p>YYYYYYY</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
               </div>
             </div>
@@ -128,6 +128,12 @@
                     <div style="padding-left: 20px;">
                       <strong>Tipo de hosting</strong>
                       <div class="form-check">
+                        <input class="form-check-input" type="radio" name="HostingType" value="Todos" id="Todos">
+                        <label class="form-check-label" for="Todos">
+                          Todos
+                        </label>
+                      </div>
+                      <div class="form-check">
                         <input class="form-check-input" type="radio" name="HostingType" value="Wordpress" id="Wordpress">
                         <label class="form-check-label" for="Wordpress">
                           WordPress
@@ -139,27 +145,21 @@
                           Hosting web
                         </label>
                       </div>
-                      <div class="form-check">
-                        <input class="form-check-input" type="radio" name="HostingType" value="Reseller" id="Reseller">
-                        <label class="form-check-label" for="Reseller">
-                          Reseller
-                        </label>
-                      </div>
-                      <div class="form-check">
-                        <input class="form-check-input" type="radio" name="HostingType" value="Cloud" id="Cloud">
-                        <label class="form-check-label" for="Cloud">
-                          Hosting elástico (Cloud)
-                        </label>
-                      </div>
-                      <div class="form-check">
-                        <input class="form-check-input" type="radio" name="HostingType" value="Wizard" id="Wizard">
-                        <label class="form-check-label" for="Wizard">
-                          Asistente de creación de páginas web
-                        </label>
+                    </div>
+                  </div> 
+
+                  <hr class="featurette-divider" style="margin: 20px 0;">
+                  
+                  <!-- FORM PRICE -->
+                  <div class='row'>
+                    <div style="padding-left: 20px;">
+                      <strong>Precio mensual</strong>
+                      <div class="form-group">
+                        <input class="form-control" type="text" placeholder="Max" name="MaxPrice" id="MaxPrice" style="width: 60px; margin-left: 10px; float: right;">
+                        <input class="form-control" type="text" placeholder="Min" name="MinPrice" id="MinPrice" style="width: 60px;">
                       </div>
                     </div>
-                    
-                  </div> <!-- // FORM HOSTING-TYPE row -->
+                  </div>
 
                   <!-- SEARCH BUTTON -->
                   <div class="text-center">
