--- a/www/index.html
+++ b/www/index.html
@@ -63,40 +63,38 @@
 
     <main role="main">
 
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000" style="height: 300px;">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
+        <div class="carousel-inner" style="height: 300px;">
+          <div class="carousel-item active" style="height: 300px;">
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#523f78"/></svg>
             <div class="container">
               <div class="carousel-caption text-left">
                 <h1>¿Buscas un hosting para alojar tu proyecto?</h1>
-                <p>¡No busques más y encuentra el <strong>plan de hosting</strong> que mejor se adapta a tí usando nuestro <strong>comparador</strong>!</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                <p>¡No busques más y encuentra el <strong style="color: #cbbde2;">plan de hosting</strong> que mejor se adapta a tí usando nuestro <strong style="color: #cbbde2;">comparador</strong>!</p>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" style="height: 300px;">
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#523f78"/></svg>
             <div class="container">
               <div class="carousel-caption">
                 <h1>Encuentra el mejor hosting</h1>
-                <p>Comparamos entre más de <strong>100 planes de hosting</strong> de diferentes proveedores</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                <p>Comparamos entre más de <strong style="color: #cbbde2;">100 planes de hosting</strong> de diferentes proveedores</p>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" style="height: 300px;">
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#523f78"/></svg>
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1>XXXXXX</h1>
-                <p>YYYYYYY</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                <h1>¿Demasiado complicado?</h1>
+                <p>Prueba a pasarte por nuestra sección de ayuda. Tenemos respuestas <strong style="color: #cbbde2;">cortas y simples</strong> a las dudas más comunes</p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Ayuda</a></p>
               </div>
             </div>
           </div>
