Add form defaults

--- a/www/index.html
+++ b/www/index.html
@@ -129,7 +129,7 @@
                     <div style="padding-left: 20px;">
                       <strong>Tipo de hosting</strong>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="HostingType" value="Todos" id="Todos">
+                        <input class="form-check-input" type="radio" name="HostingType" value="Todos" id="Todos" checked>
                         <label class="form-check-label" for="Todos">
                           Todos
                         </label>
@@ -156,7 +156,7 @@
                     <div style="padding-left: 20px;">
                       <strong>Precio mensual</strong>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="MonthlyPrice" value="Price99" id="Price99">
+                        <input class="form-check-input" type="radio" name="MonthlyPrice" value="Price99" id="Price99" checked>
                         <label class="form-check-label" for="Price99">
                           Todos
                         </label>
