--- a/www/index.html
+++ b/www/index.html
@@ -40,8 +40,12 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <!-- LEFT LINKS -->
+        <!-- LOGO -->
+        <div class="font-weight-bold" style="font-size: larger;">
+          <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
+        </div>
+        <!-- LINKS -->
+        <div class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#">Home</a>
@@ -53,64 +57,44 @@
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </li>
           </ul>
-
-          <!-- TODO: RIGHT ICONS  copied from Bootrap website -->
-          <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-            <li class="nav-item">
-              <a class="nav-link p-2" href="https://github.com/twbs/bootstrap" target="_blank" rel="noopener" aria-label="GitHub"><svg class="navbar-nav-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 499.36" focusable="false"><title>GitHub</title><path d="M256 0C114.64 0 0 114.61 0 256c0 113.09 73.34 209 175.08 242.9 12.8 2.35 17.47-5.56 17.47-12.34 0-6.08-.22-22.18-.35-43.54-71.2 15.49-86.2-34.34-86.2-34.34-11.64-29.57-28.42-37.45-28.42-37.45-23.27-15.84 1.73-15.55 1.73-15.55 25.69 1.81 39.21 26.38 39.21 26.38 22.84 39.12 59.92 27.82 74.5 21.27 2.33-16.54 8.94-27.82 16.25-34.22-56.84-6.43-116.6-28.43-116.6-126.49 0-27.95 10-50.8 26.35-68.69-2.63-6.48-11.42-32.5 2.51-67.75 0 0 21.49-6.88 70.4 26.24a242.65 242.65 0 0 1 128.18 0c48.87-33.13 70.33-26.24 70.33-26.24 14 35.25 5.18 61.27 2.55 67.75 16.41 17.9 26.31 40.75 26.31 68.69 0 98.35-59.85 120-116.88 126.32 9.19 7.9 17.38 23.53 17.38 47.41 0 34.22-.31 61.83-.31 70.23 0 6.85 4.61 14.81 17.6 12.31C438.72 464.97 512 369.08 512 256.02 512 114.62 397.37 0 256 0z" fill="currentColor" fill-rule="evenodd"/></svg></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link p-2" href="https://twitter.com/getbootstrap" target="_blank" rel="noopener" aria-label="Twitter"><svg class="navbar-nav-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 416.32" focusable="false"><title>Twitter</title><path d="M160.83 416.32c193.2 0 298.92-160.22 298.92-298.92 0-4.51 0-9-.2-13.52A214 214 0 0 0 512 49.38a212.93 212.93 0 0 1-60.44 16.6 105.7 105.7 0 0 0 46.3-58.19 209 209 0 0 1-66.79 25.37 105.09 105.09 0 0 0-181.73 71.91 116.12 116.12 0 0 0 2.66 24c-87.28-4.3-164.73-46.3-216.56-109.82A105.48 105.48 0 0 0 68 159.6a106.27 106.27 0 0 1-47.53-13.11v1.43a105.28 105.28 0 0 0 84.21 103.06 105.67 105.67 0 0 1-47.33 1.84 105.06 105.06 0 0 0 98.14 72.94A210.72 210.72 0 0 1 25 370.84a202.17 202.17 0 0 1-25-1.43 298.85 298.85 0 0 0 160.83 46.92" fill="currentColor"/></svg></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link p-2" href="https://bootstrap-slack.herokuapp.com" target="_blank" rel="noopener" aria-label="Slack"><svg class="navbar-nav-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512" focusable="false"><title>Slack</title><path fill="currentColor" d="M210.787 234.832l68.31-22.883 22.1 65.977-68.309 22.882z"/><path d="M490.54 185.6C437.7 9.59 361.6-31.34 185.6 21.46S-31.3 150.4 21.46 326.4 150.4 543.3 326.4 490.54 543.34 361.6 490.54 185.6zM401.7 299.8l-33.15 11.05 11.46 34.38c4.5 13.92-2.87 29.06-16.78 33.56-2.87.82-6.14 1.64-9 1.23a27.32 27.32 0 0 1-24.56-18l-11.46-34.38-68.36 22.92 11.46 34.38c4.5 13.92-2.87 29.06-16.78 33.56-2.87.82-6.14 1.64-9 1.23a27.32 27.32 0 0 1-24.56-18l-11.46-34.43-33.15 11.05c-2.87.82-6.14 1.64-9 1.23a27.32 27.32 0 0 1-24.56-18c-4.5-13.92 2.87-29.06 16.78-33.56l33.12-11.03-22.1-65.9-33.15 11.05c-2.87.82-6.14 1.64-9 1.23a27.32 27.32 0 0 1-24.56-18c-4.48-13.93 2.89-29.07 16.81-33.58l33.15-11.05-11.46-34.38c-4.5-13.92 2.87-29.06 16.78-33.56s29.06 2.87 33.56 16.78l11.46 34.38 68.36-22.92-11.46-34.38c-4.5-13.92 2.87-29.06 16.78-33.56s29.06 2.87 33.56 16.78l11.47 34.42 33.15-11.05c13.92-4.5 29.06 2.87 33.56 16.78s-2.87 29.06-16.78 33.56L329.7 194.6l22.1 65.9 33.15-11.05c13.92-4.5 29.06 2.87 33.56 16.78s-2.88 29.07-16.81 33.57z" fill="currentColor"/></svg></a>
-            </li>
-          </ul>
-          <!-- TODO: Remove if no needed
-            <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>-->
         </div>
       </nav>
     </header>
 
     <main role="main">
 
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000" style="height: 300px;">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
+        <div class="carousel-inner" style="height: 300px;">
+          <div class="carousel-item active" style="height: 300px;">
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#523f78"/></svg>
             <div class="container">
               <div class="carousel-caption text-left">
                 <h1>¿Buscas un hosting para alojar tu proyecto?</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                <p>¡No busques más y encuentra el <strong style="color: #cbbde2;">plan de hosting</strong> que mejor se adapta a tí usando nuestro <strong style="color: #cbbde2;">comparador</strong>!</p>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" style="height: 300px;">
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#523f78"/></svg>
             <div class="container">
               <div class="carousel-caption">
-                <h1>Another example headline.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                <h1>Encuentra el mejor hosting</h1>
+                <p>Comparamos entre más de <strong style="color: #cbbde2;">100 planes de hosting</strong> de diferentes proveedores</p>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" style="height: 300px;">
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#523f78"/></svg>
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                <h1>¿Demasiado complicado?</h1>
+                <p>Prueba a pasarte por nuestra sección de ayuda. Tenemos respuestas <strong style="color: #cbbde2;">cortas y simples</strong> a las dudas más comunes</p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button">Ayuda</a></p>
               </div>
             </div>
           </div>
@@ -126,145 +110,100 @@
       </div>
 
       <div class="container">
+        <div class="row">
+          <div class="col-4">
 
-        <!--<button id="btnSun">Search!</button>-->
-        <form id="filter" action="#">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="HostingType" value="Wordpress" id="Wordpress">
-            <label class="form-check-label" for="Wordpress">
-              WordPress
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="HostingType" value="Web" id="Web">
-            <label class="form-check-label" for="Web">
-              Hosting web
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="HostingType" value="Reseller" id="Reseller">
-            <label class="form-check-label" for="Reseller">
-              Reseller
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="HostingType" value="Cloud" id="Cloud">
-            <label class="form-check-label" for="Cloud">
-              Hosting elástico (Cloud)
-            </label>
-          </div>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="HostingType" value="Wizard" id="Wizard">
-            <label class="form-check-label" for="Wizard">
-              Asistente de creación de páginas web
-            </label>
-          </div>
-          <button type="submit" class="btn btn-primary" id="btnSun">Search!</button>
-        </form>
+            <!-- FORM -->
+            <div class='card mb-4 shadow-sm'>
+              <form id="filter" action="#">
 
+                <div class='container card-body'>
 
-        <div id="test-result"></div>
+                  <!-- FILTER HEADER-->
+                  <div class='row' style="padding: 0px 00px 20px 20px;">
+                    <img src="img/filter.svg" style="height: 25px; margin-right: 15px;" /> Filtros
+                  </div>
 
+                  <!-- FORM HOSTING-TYPE -->
+                  <div class='row'>
+                    <div style="padding-left: 20px;">
+                      <strong>Tipo de hosting</strong>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="HostingType" value="Todos" id="Todos" checked>
+                        <label class="form-check-label" for="Todos">
+                          Todos
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="HostingType" value="Wordpress" id="Wordpress">
+                        <label class="form-check-label" for="Wordpress">
+                          WordPress
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="HostingType" value="Web" id="Web">
+                        <label class="form-check-label" for="Web">
+                          Hosting web
+                        </label>
+                      </div>
+                    </div>
+                  </div> 
 
-        <hr class="featurette-divider">
+                  <hr class="featurette-divider" style="margin: 20px 0;">
+                  
+                  <!-- FORM PRICE -->
+                  <div class='row'>
+                    <div style="padding-left: 20px;">
+                      <strong>Precio mensual</strong>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="MonthlyPrice" value="Price99" id="Price99" checked>
+                        <label class="form-check-label" for="Price99">
+                          Todos
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="MonthlyPrice" value="Price0" id="Price0">
+                        <label class="form-check-label" for="Price0">
+                          Hosting gratuito
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="MonthlyPrice" value="Price5" id="Price5">
+                        <label class="form-check-label" for="Price5">
+                          Hasta 5€
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="MonthlyPrice" value="Price10" id="Price10">
+                        <label class="form-check-label" for="Price10">
+                          Hasta 10€
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="MonthlyPrice" value="Price25" id="Price25">
+                        <label class="form-check-label" for="Price25">
+                          Hasta 25€
+                        </label>
+                      </div>
+                    </div>
+                  </div> 
 
-        <div class="card-deck mb-3 text-center">
-          <div class="card mb-4 shadow-sm">
-            <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Free</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>10 users included</li>
-                <li>2 GB of storage</li>
-                <li>Email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
-            </div>
-          </div>
-          <div class="card mb-4 shadow-sm">
-            <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Pro</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>20 users included</li>
-                <li>10 GB of storage</li>
-                <li>Priority email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-            </div>
-          </div>
-          <div class="card mb-4 shadow-sm">
-            <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Enterprise</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>30 users included</li>
-                <li>15 GB of storage</li>
-                <li>Phone and email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
-            </div>
-          </div>
-        </div>
+                  <!-- SEARCH BUTTON -->
+                  <div class="text-center">
+                    <button type="submit" class="btn btn-primary" id="btnSun">Buscar</button>
+                  </div>
+                
+                </div> <!-- // FORM container -->
+              </form>
+            </div> <!-- // card mb-4 shadow-sm -->
 
-        <hr class="featurette-divider">
+            <!-- // FORM -->
+          </div> <!-- // col FILTER-->
+          <div class="col-8">
+            <div id="test-result">Vaya, parece que no hay nada por aquí. Usa el filtro de la izquierda para encontrar tu nuevo plan de hosting.</div>
+          </div>
 
-        <div class="card-deck mb-3 text-center">
-          <div class="card mb-4 shadow-sm">
-            <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Free</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>10 users included</li>
-                <li>2 GB of storage</li>
-                <li>Email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
-            </div>
-          </div>
-          <div class="card mb-4 shadow-sm">
-            <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Pro</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>20 users included</li>
-                <li>10 GB of storage</li>
-                <li>Priority email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-            </div>
-          </div>
-          <div class="card mb-4 shadow-sm">
-            <div class="card-header">
-              <h4 class="my-0 font-weight-normal">Enterprise</h4>
-            </div>
-            <div class="card-body">
-              <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-              <ul class="list-unstyled mt-3 mb-4">
-                <li>30 users included</li>
-                <li>15 GB of storage</li>
-                <li>Phone and email support</li>
-                <li>Help center access</li>
-              </ul>
-              <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
-            </div>
-          </div>
-        </div>
+        </div> <!-- // MAIN row -->
 
       </div><!-- /.container -->
 
