--- a/www/index.html
+++ b/www/index.html
@@ -188,6 +188,8 @@
                     </div>
                   </div> 
 
+                  <hr class="featurette-divider" style="margin: 20px 0;">
+
                   <!-- SEARCH BUTTON -->
                   <div class="text-center">
                     <button type="submit" class="btn btn-primary" id="btnSun">Buscar</button>
