add domain in the filter

--- a/www/index.html
+++ b/www/index.html
@@ -190,6 +190,33 @@
 
                   <hr class="featurette-divider" style="margin: 20px 0;">
 
+                  <!-- DOMAIN -->
+                  <div class='row'>
+                    <div style="padding-left: 20px;">
+                      <strong>Dominio</strong>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="DomainIncluded" value="Todos" id="Todos" checked>
+                        <label class="form-check-label" for="Todos">
+                          Todos
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="DomainIncluded" value="year" id="year">
+                        <label class="form-check-label" for="year">
+                          1 año incluído
+                        </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="DomainIncluded" value="true" id="true">
+                        <label class="form-check-label" for="true">
+                          Incluído siempre
+                        </label>
+                      </div>
+                    </div>
+                  </div> 
+
+                  <hr class="featurette-divider" style="margin: 20px 0;">
+
                   <!-- SEARCH BUTTON -->
                   <div class="text-center">
                     <button type="submit" class="btn btn-primary" id="btnSun">Buscar</button>
