--- a/www/index.html
+++ b/www/index.html
@@ -234,13 +234,16 @@
 
         </div> <!-- // MAIN row -->
 
+        <p class="float-right"><a href="#">Ir arriba</a></p>
+
       </div><!-- /.container -->
 
 
       <!-- FOOTER -->
-      <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2020 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <footer class="container small">
+        <hr class="featurette-divider" style="margin: 20px 0;">
+        <p class="text-center">El diseño de este sitio web bebe del template de Boostrap "<a href="https://getbootstrap.com/docs/4.5/examples/carousel/" target="_blank">Carousel</a>" por Mark Otto, Jacob Thornton y otros.</p>
+        <p class="text-center">&copy; 2021 QueHosting.es</p>
       </footer>
     </main>
   
