several minor changes

--- a/www/faq.html
+++ b/www/faq.html
@@ -41,19 +41,18 @@
         </button>
         <!-- LOGO -->
         <div class="font-weight-bold" style="font-size: larger;">
-          <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
+          <a href="index.html">
+            <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
+          </a>
         </div>
         <!-- LINKS -->
         <div class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="#">Preguntas frecuentes</a>
             </li>
           </ul>
         </div>
@@ -70,14 +69,14 @@
         <h2>Sobre QueHosting.es</h2>
 
           <p>
-            <a data-toggle="collapse" href="#about1" aria-expanded="false" aria-controls="about1">¿Qué es QueHosting.es?</a>
+            <a data-toggle="collapse" href="#about1" aria-expanded="false" aria-controls="about1">> ¿Qué es QueHosting.es?</a>
           </p>
           <div class="collapse" id="about1">
             QueHosting.es es un proyecto que nace para proporcionar una herramienta fácil de usar y gratuita que ayude a elegir <strong>alojamiento web</strong> para proyectos de cualquier tamaño, tanto personales como de empresa.<br /> 
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#about2" aria-expanded="false" aria-controls="about2">¿Por qué QueHosting.es?</a>
+            <a data-toggle="collapse" href="#about2" aria-expanded="false" aria-controls="about2">> ¿Por qué QueHosting.es?</a>
           </p>
           <div class="collapse" id="about2">
             Hoy en día la mayoría de los resultados de búsqueda para <strong>comparar entre diferentes planes de hosting</strong> son directamente entradas a blogs que realizan comparaciones, en ocasiones muy exhaustivas y profesionales, pero sólo entre unos pocos proveedores.
@@ -85,21 +84,21 @@
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#about3" aria-expanded="false" aria-controls="about3">¿Cómo funciona QueHosting.es?</a>
+            <a data-toggle="collapse" href="#about3" aria-expanded="false" aria-controls="about3">> ¿Cómo funciona QueHosting.es?</a>
           </p>
           <div class="collapse" id="about3">
             Desde la <a href="index.html">página de inicio</a>, se ofrece un sencillo filtro de búsqueda para poder encontrar el alojamiento que mejor se adapte a las necesidades del usuario. Tan símple como eso.
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#about4" aria-expanded="false" aria-controls="about4">No veo muchas opciones en QueHosting.es. ¿Por qué?</a>
+            <a data-toggle="collapse" href="#about4" aria-expanded="false" aria-controls="about4">> No veo muchas opciones en QueHosting.es. ¿Por qué?</a>
           </p>
           <div class="collapse" id="about4">
             Pues porqué estamos en una fase muy inicial del proyecto, lo que se conoce como estar en fase "beta". Poco a poco iremos añadiendo <strong>opciones de filtro</strong> en la web, así como <strong>planes de alojamiento y proveedores</strong>.
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#about5" aria-expanded="false" aria-controls="about5">¿Qué gana QueHosting.es con todo ésto?</a>
+            <a data-toggle="collapse" href="#about5" aria-expanded="false" aria-controls="about5">> ¿Qué gana QueHosting.es con todo ésto?</a>
           </p>
           <div class="collapse" id="about5">
             En QueHosting.es contamos con un programa de afiliación para algunos de los proveedores de hosting que listamos. Cuando realizas una contratación a través de alguno de los resultados de búsqueda, es posible que QueHosting.es reciba una pequeña compensación por ello, sin que ésto afecte en ningún caso al precio que se pagaría al contratar el alojamiento por otras vías. Es importante recalcar que QueHosting.es no adapta los resultados de búsqueda para favorecer a los proveedores con los que se tiene una relación de afiliación.
@@ -108,14 +107,14 @@
         <h2>Sobre los resultados de búsqueda</h2>
 
           <p>
-            <a data-toggle="collapse" href="#results1" aria-expanded="false" aria-controls="results1">¿Adapta QueHosting.es los resultados de búsqueda para poder ganar más dinero?</a>
+            <a data-toggle="collapse" href="#results1" aria-expanded="false" aria-controls="results1">> ¿Adapta QueHosting.es los resultados de búsqueda para poder ganar más dinero?</a>
           </p>
           <div class="collapse" id="results1">
-            Desafortunadamente, en esta fase del proyecto QueHosting.es no gana dinero. Pero en cualquier caso, no adaptamos ningún resultado de búsqueda ni de filtro para favorecer la (pobre) economía del equipo de QueHosting.es.
+            Desafortunadamente, en esta fase del proyecto QueHosting.es no gana dinero. Pero en cualquier caso, <strong>no adaptamos ningún resultado de búsqueda</strong> ni de filtro para favorecer la (pobre) economía del equipo de QueHosting.es, y no tenemos pensado hacerlo en el futuro.
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#results2" aria-expanded="false" aria-controls="results2">El precio indicado en un resultado no se corresponde con el de la web del plan</a>
+            <a data-toggle="collapse" href="#results2" aria-expanded="false" aria-controls="results2">> El precio indicado en un resultado no se corresponde con el de la web del plan</a>
           </p>
           <div class="collapse" id="results2">
             En QueHosting.es teníamos dudas sobre la mejor forma de presentar los detalles del precio de los planes, pues para un mismo plan, se suelen dar varios precios en función del tiempo que se va a contratar ese plan. Pagarás mucho menos mensualmente al contratar 4 años que al pagar mes a mes.<br />
@@ -123,7 +122,7 @@
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#results3" aria-expanded="false" aria-controls="results3">He encontrado algún dato erroneo para algún resultado de búsqueda</a>
+            <a data-toggle="collapse" href="#results3" aria-expanded="false" aria-controls="results3">> He encontrado algún dato erroneo para algún resultado de búsqueda</a>
           </p>
           <div class="collapse" id="results3">
             La frecuencia de actualización de los datos de QueHosting.es puede variar, y en cualquier caso puede no reflejar los cambios en los detalles de un plan de forma instantanea. Así que es posible que haya algún dato para algún plan que aun no se haya actualizado o incluso que se haya importado en nuestra base de datos con algún error. Es por eso que es siempre importante revisar de nuevo los detalles de un plan en el momento de la contratación.  
@@ -132,7 +131,7 @@
         <h2>Sobre las opciones de búsqueda</h2>
 
           <p>
-            <a data-toggle="collapse" href="#options1" aria-expanded="false" aria-controls="options1">No sé nada de hostings, ¿por dónde empiezo?</a>
+            <a data-toggle="collapse" href="#options1" aria-expanded="false" aria-controls="options1">> No sé nada de hostings, ¿por dónde empiezo?</a>
           </p>
           <div class="collapse" id="options1">
             Lo primero quizá sea tener claro qué <strong>presupuesto mensual</strong> tienes. Recuerda que el precio mostrado en QueHosting.es es por defecto <strong>el mejor precio</strong> para cada uno de los hostings, que se suele corresponder con la permanencia mayor.<br />
@@ -141,14 +140,14 @@
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#options2" aria-expanded="false" aria-controls="options2">¿Merece la pena contratar un hosting gratuito?</a>
+            <a data-toggle="collapse" href="#options2" aria-expanded="false" aria-controls="options2">> ¿Merece la pena contratar un hosting gratuito?</a>
           </p>
           <div class="collapse" id="options2">
             Todo depende del tipo de proyecto que quieras alojar. En ocasiones, los <strong>hosting gratis</strong> incluyen publicidad (a veces encubierta) o no ofrecen todas las funciones que encontrarías en un hosting de pago, como pueden ser el soporte para versiones específicas de PHP. Normalmente se caracterizan por ofrecer recursos limitados comno poco espacio en disco o poca memoria RAM. Sin embargo, para proyectos personales pequeños o pruebas de concepto, pueden funcionar muy bien.
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#options3" aria-expanded="false" aria-controls="options3">¿Qué es un "Tipo de Hosting" y qué tipos hay?</a>
+            <a data-toggle="collapse" href="#options3" aria-expanded="false" aria-controls="options3">> ¿Qué es un "Tipo de Hosting" y qué tipos hay?</a>
           </p>
           <div class="collapse" id="options3">En el mundo del hosting existen diversos <strong>tipos de hosting</strong> en funciónd el tipo de proyecto a alojar. Por ejemplo, si vas a usar una solución popular como <strong>WordPress</strong>, prácticamente todos los proveedores ofrecerán planes pensados específicamente para alojar este tipo de proyectos, haciendo la gestión del mismo algo mucho más sencillo para el usuario. A grandes rasgos, tendríamos los siguientes <strong>tipos de hosting</strong>:
             <ul>
@@ -164,7 +163,7 @@
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#options4" aria-expanded="false" aria-controls="options4">¿Qué son las opciones de "dominio web" del filtro de QueHosting.es?</a>
+            <a data-toggle="collapse" href="#options4" aria-expanded="false" aria-controls="options4">> ¿Qué son las opciones de "dominio web" del filtro de QueHosting.es?</a>
           </p>
           <div class="collapse" id="options4">
             La mayoría de los <strong>planes de alojamiento web</strong> incluyen una de las siguientes opciones referente al dominio:
