--- a/www/index.html
+++ b/www/index.html
@@ -42,19 +42,18 @@
         </button>
         <!-- LOGO -->
         <div class="font-weight-bold" style="font-size: larger;">
-          <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
+          <a href="index.html">
+            <span style="color: #cbbde2;">QUE</span><span style="color: #fff;">HOSTING</span><span style="color: #cbbde2;">.es</span>
+          </a>
         </div>
         <!-- LINKS -->
         <div class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="faq.html">Preguntas frecuentes</a>
             </li>
           </ul>
         </div>
@@ -93,8 +92,8 @@
             <div class="container">
               <div class="carousel-caption text-right">
                 <h1>¿Demasiado complicado?</h1>
-                <p>Prueba a pasarte por nuestra sección de ayuda. Tenemos respuestas <strong style="color: #cbbde2;">cortas y simples</strong> a las dudas más comunes</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button">Ayuda</a></p>
+                <p>Prueba a pasarte por nuestra sección de preguntas frecuentes. Tenemos respuestas <strong style="color: #cbbde2;">cortas y simples</strong> a las dudas más comunes</p>
+                <p><a class="btn btn-lg btn-primary" href="faq.html" role="button">Preguntas frecuentes</a></p>
               </div>
             </div>
           </div>
