fit carousel in mobile devices

--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#523f78"/></svg>
             <div class="container">
               <div class="carousel-caption text-left">
-                <h1>¿Buscas un hosting para alojar tu proyecto?</h1>
+                <h1>¿Buscas alojamiento web?</h1>
                 <p>¡No busques más y encuentra el <strong style="color: #cbbde2;">plan de hosting</strong> que mejor se adapta a tí usando nuestro <strong style="color: #cbbde2;">comparador</strong>!</p>
               </div>
             </div>
@@ -92,7 +92,7 @@
             <div class="container">
               <div class="carousel-caption text-right">
                 <h1>¿Demasiado complicado?</h1>
-                <p>Prueba a pasarte por nuestra sección de preguntas frecuentes. Tenemos respuestas <strong style="color: #cbbde2;">cortas y simples</strong> a las dudas más comunes</p>
+                <p>Prueba a pasarte por nuestra sección de preguntas frecuentes</p>
                 <p><a class="btn btn-lg btn-primary" href="faq.html" role="button">Preguntas frecuentes</a></p>
               </div>
             </div>
