final cors changes

--- a/www/faq.html
+++ b/www/faq.html
@@ -147,7 +147,7 @@
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#options3" aria-expanded="false" aria-controls="options3">> ¿Qué es un "Tipo de Hosting" y qué tipos hay?</a>
+            <a data-toggle="collapse" href="#options3" aria-expanded="false" aria-controls="options3">> ¿Qué es un "<strong>tipo de Hosting</strong>" y qué tipos hay?</a>
           </p>
           <div class="collapse" id="options3">En el mundo del hosting existen diversos <strong>tipos de hosting</strong> en funciónd el tipo de proyecto a alojar. Por ejemplo, si vas a usar una solución popular como <strong>WordPress</strong>, prácticamente todos los proveedores ofrecerán planes pensados específicamente para alojar este tipo de proyectos, haciendo la gestión del mismo algo mucho más sencillo para el usuario. A grandes rasgos, tendríamos los siguientes <strong>tipos de hosting</strong>:
             <ul>
@@ -163,7 +163,7 @@
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#options4" aria-expanded="false" aria-controls="options4">> ¿Qué son las opciones de "dominio web" del filtro de QueHosting.es?</a>
+            <a data-toggle="collapse" href="#options4" aria-expanded="false" aria-controls="options4">> ¿Qué son las opciones de "<strong>dominio web</strong>" del filtro de QueHosting.es?</a>
           </p>
           <div class="collapse" id="options4">
             La mayoría de los <strong>planes de alojamiento web</strong> incluyen una de las siguientes opciones referente al dominio:
