--- a/www/faq.html
+++ b/www/faq.html
@@ -10,7 +10,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/carousel/">
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/4.5/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -29,8 +29,18 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="css/carousel.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/4.5/examples/carousel/carousel.css" rel="stylesheet">
     <link href="css/hosting-compare.css" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-80JXQ3H0D7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-80JXQ3H0D7');
+    </script>
   </head>
 
   <body>
@@ -147,7 +157,7 @@
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#options3" aria-expanded="false" aria-controls="options3">> ¿Qué es un "Tipo de Hosting" y qué tipos hay?</a>
+            <a data-toggle="collapse" href="#options3" aria-expanded="false" aria-controls="options3">> ¿Qué es un "<strong>tipo de Hosting</strong>" y qué tipos hay?</a>
           </p>
           <div class="collapse" id="options3">En el mundo del hosting existen diversos <strong>tipos de hosting</strong> en funciónd el tipo de proyecto a alojar. Por ejemplo, si vas a usar una solución popular como <strong>WordPress</strong>, prácticamente todos los proveedores ofrecerán planes pensados específicamente para alojar este tipo de proyectos, haciendo la gestión del mismo algo mucho más sencillo para el usuario. A grandes rasgos, tendríamos los siguientes <strong>tipos de hosting</strong>:
             <ul>
@@ -163,7 +173,7 @@
           </div>
 
           <p>
-            <a data-toggle="collapse" href="#options4" aria-expanded="false" aria-controls="options4">> ¿Qué son las opciones de "dominio web" del filtro de QueHosting.es?</a>
+            <a data-toggle="collapse" href="#options4" aria-expanded="false" aria-controls="options4">> ¿Qué son las opciones de "<strong>dominio web</strong>" del filtro de QueHosting.es?</a>
           </p>
           <div class="collapse" id="options4">
             La mayoría de los <strong>planes de alojamiento web</strong> incluyen una de las siguientes opciones referente al dominio:
