FAQ structured data

--- a/www/404.html
+++ b/www/404.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="404 Página no encontrada" />
     <meta property="og:url" content="https://quehosting.es/" />
     <meta property="og:site_name" content="Comparativa Hosting España" />
-    <title>QueHosting.es - Página no encontrada</title>
+    <title>404 Página no encontrada</title>
 
     <link rel="canonical" href="https://quehosting.es">
 
