--- a/www/index.html
+++ b/www/index.html
@@ -258,6 +258,7 @@
         <hr class="featurette-divider" style="margin: 20px 0;">
         <p class="text-center">El diseño de este sitio web bebe del template de Boostrap "<a href="https://getbootstrap.com/docs/4.5/examples/carousel/" target="_blank">Carousel</a>" por Mark Otto, Jacob Thornton y otros.</p>
         <p class="text-center">&copy; 2021 QueHosting.es</p>
+        <p class="text-center"><a href="https://quehosting.es/comparativas/hosting-wordpress.html">Hosting WordPress</a></p>
       </footer>
     </main>
   
