--- a/www/comparativas/hosting-wordpress.html
+++ b/www/comparativas/hosting-wordpress.html
@@ -91,10 +91,10 @@
         <div class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Inicio</a>
+              <a class="nav-link" href="https://quehosting.es/index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="faq.html">Preguntas frecuentes</a>
+              <a class="nav-link" href="https://quehosting.es/faq.html">Preguntas frecuentes</a>
             </li>
           </ul>
         </div>
